--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
         <p class="group-name">LE GROUPE 4</p>
         <h3>Les Membres:</h3>
         <ul class="credits-list">
-            <li>Raiyan Shikoh (RA2511003010431)</li>
+            <li>Raiyan S (RA2511003010431)</li>
             <li>Ganesh (RA2511003010383)</li>
             <li>Vinesh (RA2511003010401)</li>
             <li>Vishnu (RA2511003010412)</li>
@@ -505,4 +505,5 @@
         });
     </script>
 </body>
+
 </html>
