--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
             <li>Ganesh (RA2511003010383)</li>
             <li>Vinesh (RA2511003010401)</li>
             <li>Vishnu (RA2511003010412)</li>
-            <li>Himanish (RA2511003010411)</li>
+            <li>Himanish K (RA2511003010411)</li>
         </ul>
     </div>
 
@@ -507,3 +507,4 @@
 </body>
 
 </html>
+
