Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@ La guerre s’achève par la reconquête du territoire français et renforce le 
         <p class="group-name">LE GROUPE 5</p>
         <h3>Les Membres:</h3>
         <ul class="credits-list">
-            <li>Raiyan Shikoh (RA2511003010431)</li>
+            <li>Raiyan S (RA2511003010431)</li>
             <li>Ganesh (RA2511003010383)</li>
             <li>Vinesh (RA2511003010401)</li>
             <li>Vishnu (RA2511003010412)</li>
@@ -565,4 +565,5 @@ La guerre s’achève par la reconquête du territoire français et renforce le 
 
 </body>
 </html>
+
 
